--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -381,6 +381,8 @@
    time (via the "rc" and "user" configuration files or via command-line
    options).
 
+% This Tip needs to be put elsewhere.
+
    \textbf{Tip:}
    \index{tips!tooltips}
    \index{tooltips}
