More work on menu, started on seqedit upgrades.

--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -754,9 +754,13 @@
    \label{fig:seq64_menu_file_options_mouse}
 \end{figure}
 
-   The default method is \textbf{seq24 (original style)}.
-   The alternate method is \textbf{fruity} (similar to a certain well known
-   sequencer).
+   \index{interaction method}
+   \index{mouse interaction}
+   \textbf{Interaction Method}
+
+   The default mouse interaction method is \textbf{Seq24 (original style)}.
+   The alternate mouse interaction method is \textbf{Fruity (similar to a
+   certain well known sequencer)}.
 
    \index{mouse!fruity}
    The alternate method is presumably that of the \textsl{Fruity Loops}
@@ -797,12 +801,17 @@
    Note that drawing/painting can also be done while the sequence is playing,
    and notes will be added to be played the next time the progress bar crosses
    them.
+
+   \index{sequencer64 options}
+   \textbf{Sequencer64 Options}
+
+   This section currently contains a couple of new options.
    
-   \textbf{New:}
-   \index{new!Mod4 mode}
    \index{keys!Mod4}
+   \index{mouse!Mod4}
    \label{new_mod4_mode}
-   \textbf{The Mod4 Right-Click Mode}.
+   \textbf{Mod4 key preserves add (paint) mode in song and pattern editors}
+
    In order to work better with certain trackpads, the
    "Seq24" mode of mouse interaction can be modified (only in the
    Pattern Editor at present) so that the Mod4 key (Super or Windows key)
@@ -819,12 +828,16 @@
    Note that this option will not interfere with the Mod4 key being set
    in the \textbf{Keyboard} option tab, since the keys there mainly apply to
    the Patterns Panel (main window).
+   
+   \index{mouse!split mode}
+   \label{new_split_mode}
+   \textbf{Middle click splits song triggers at nearest snap (instead of
+   halfway point}
 
 % Move this section to the right place and simply create a section-reference to
 % it here.
 
-   \textbf{New:}
-   \index{new!paint mode}
+   \index{paint mode}
    Another way to turn on the paint mode has been added, based on a feature
    found in a patch that someone posted about in some mailing list somewhere on
    the internet.
