Finished seqedit panel pix and add Draw file for perfedit panel.

--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-07-04
+% \update      2016-09-02
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -82,9 +82,9 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{pattern/pattern-edit-first-panel-items.png}
-   \caption{Pattern Editor, First Panel Items, Legacy}
-   \label{fig:pattern_editor_first_panel_items_legacy}
+   \includegraphics[scale=0.55]{pattern/pattern-edit-first-panel-items.png}
+   \caption{Pattern Editor, First Panel Items}
+   \label{fig:pattern_editor_first_panel_items}
 \end{figure}
 
    In recent versions of \textsl{Sequencer64}, a "sequence-is-transposable"
@@ -92,7 +92,6 @@
 
 \begin{figure}[H]
    \centering 
-%  \includegraphics[scale=0.75]{pattern/pattern-edit-first-panel-items.png}
    \includegraphics[scale=0.75]{new/pattern_editor_top_panel-0_9_15.png}
    \caption{Pattern Editor, First Panel Emphasizing Transposable Button}
    \label{fig:pattern_editor_first_panel_items}
@@ -175,9 +174,9 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{pattern/pattern-edit-second-panel-items.png}
-   \caption{Pattern Editor, Second Panel Items, Legacy}
-   \label{fig:pattern_editor_main_panel_items_legacy}
+   \includegraphics[scale=0.55]{pattern/pattern-edit-second-panel-items.png}
+   \caption{Pattern Editor, Second Panel Items}
+   \label{fig:pattern_editor_main_panel_items}
 \end{figure}
 
    If \textsl{Sequencer64} is built with the new chord-generation option
